--- a/Project.toml
+++ b/Project.toml
@@ -15,7 +15,8 @@ Distances = "0.10"
 Clustering = "0.13, 0.14"
 
 [extras]
+Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test"]
+test = ["Distances","Test"]
